feat: add cli interface, downgrade java version to 8 to allow bootique-cli framework, fix some bugs